src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Zendesk__Create_in_Zendesk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create in Zendesk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zendesk__Domain_Mapping__c</fullName>
        <label>Domain Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Last_Sync_Date__c</fullName>
        <label>Last Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zendesk__Last_Sync_Status__c</fullName>
        <label>Last Sync Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Result__c</fullName>
        <description>Contains the result of whether the Zendesk system was updated with the Account record changes</description>
        <label>Zendesk Support Result</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Tags__c</fullName>
        <label>Tags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_Organization_Id__c</fullName>
        <description>Contains the Zendesk ORG Id</description>
        <label>Zendesk Support Organization Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_Organization__c</fullName>
        <description>Specify your Zendesk Organization name here if you&apos;d like to override the default behavior of the ticket view.</description>
        <inlineHelpText>Show Zendesk tickets for the specified organization instead of the combined tickets for all users in the account.</inlineHelpText>
        <label>Zendesk Support Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_OutofSync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to True if the record is not synced with Zendesk Organization</description>
        <label>Zendesk Support Out of Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_oldTags__c</fullName>
        <description>contains the old tags before changes were made to the tags. To handle deleting tags in Zendesk system.</description>
        <label>Zendesk Support Old Tags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__createdUpdatedFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in trigger to prevent looping of after insert and update. This flag is used to stop the account that came for creation to get updated again thereby preventing the loop</description>
        <label>createdUpdatedFlag</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>